# NephilimToken

./: package.json
contract/: Cargo.toml
contract/src/: constants.rs  lib.rs
