[package]
name = "ft_contract"
version = "1.0.0"
authors = ["YMC Inc <ymc@ewtd.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "4.0.0", features = ["unstable"] }
uint = { version = "0.9.3", default-features = false }
near-contract-standards =  "4.0.0"
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
